cmd/coolc/y.output

state 0
	$accept: .program $end 
	program: .    (1)

	.  reduce 1 (src line 49)

	program  goto 1

state 1
	$accept:  program.$end 
	program:  program.classdecl 

	$end  accept
	tokCLASS  shift 3
	.  error

	classdecl  goto 2

state 2
	program:  program classdecl.    (2)

	.  reduce 2 (src line 51)


state 3
	classdecl:  tokCLASS.tokTYPE varformals classbody 
	classdecl:  tokCLASS.tokTYPE varformals tokEXTENDS tokTYPE actuals classbody 

	tokTYPE  shift 4
	.  error


state 4
	classdecl:  tokCLASS tokTYPE.varformals classbody 
	classdecl:  tokCLASS tokTYPE.varformals tokEXTENDS tokTYPE actuals classbody 

	tokLPAREN  shift 6
	.  error

	varformals  goto 5

state 5
	classdecl:  tokCLASS tokTYPE varformals.classbody 
	classdecl:  tokCLASS tokTYPE varformals.tokEXTENDS tokTYPE actuals classbody 

	tokEXTENDS  shift 8
	tokLBRACE  shift 9
	.  error

	classbody  goto 7

state 6
	varformals:  tokLPAREN.tokRPAREN 
	varformals:  tokLPAREN.varformals0 tokRPAREN 

	tokRPAREN  shift 10
	tokVAR  shift 12
	.  error

	varformals0  goto 11

state 7
	classdecl:  tokCLASS tokTYPE varformals classbody.    (3)

	.  reduce 3 (src line 57)


state 8
	classdecl:  tokCLASS tokTYPE varformals tokEXTENDS.tokTYPE actuals classbody 

	tokTYPE  shift 13
	.  error


state 9
	classbody:  tokLBRACE.features tokRBRACE 
	features: .    (10)

	.  reduce 10 (src line 115)

	features  goto 14

state 10
	varformals:  tokLPAREN tokRPAREN.    (5)

	.  reduce 5 (src line 80)


state 11
	varformals:  tokLPAREN varformals0.tokRPAREN 
	varformals0:  varformals0.tokCOMMA tokVAR tokID tokCOLON tokTYPE 

	tokRPAREN  shift 15
	tokCOMMA  shift 16
	.  error


state 12
	varformals0:  tokVAR.tokID tokCOLON tokTYPE 

	tokID  shift 17
	.  error


state 13
	classdecl:  tokCLASS tokTYPE varformals tokEXTENDS tokTYPE.actuals classbody 

	tokLPAREN  shift 19
	.  error

	actuals  goto 18

state 14
	classbody:  tokLBRACE features.tokRBRACE 
	features:  features.tokOVERRIDE tokDEF tokID formals tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 
	features:  features.tokDEF tokID formals tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 
	features:  features.tokVAR tokID tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 
	features:  features.tokLBRACE block tokRBRACE tokSEMICOLON 

	tokVAR  shift 23
	tokLBRACE  shift 24
	tokRBRACE  shift 20
	tokOVERRIDE  shift 21
	tokDEF  shift 22
	.  error


state 15
	varformals:  tokLPAREN varformals0 tokRPAREN.    (6)

	.  reduce 6 (src line 85)


state 16
	varformals0:  varformals0 tokCOMMA.tokVAR tokID tokCOLON tokTYPE 

	tokVAR  shift 25
	.  error


state 17
	varformals0:  tokVAR tokID.tokCOLON tokTYPE 

	tokCOLON  shift 26
	.  error


state 18
	classdecl:  tokCLASS tokTYPE varformals tokEXTENDS tokTYPE actuals.classbody 

	tokLBRACE  shift 9
	.  error

	classbody  goto 27

state 19
	actuals:  tokLPAREN.tokRPAREN 
	actuals:  tokLPAREN.actuals0 tokRPAREN 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokRPAREN  shift 28
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 30
	primary  goto 31
	actuals0  goto 29

state 20
	classbody:  tokLBRACE features tokRBRACE.    (9)

	.  reduce 9 (src line 108)


state 21
	features:  features tokOVERRIDE.tokDEF tokID formals tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 

	tokDEF  shift 47
	.  error


state 22
	features:  features tokDEF.tokID formals tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 

	tokID  shift 48
	.  error


state 23
	features:  features tokVAR.tokID tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 

	tokID  shift 49
	.  error


state 24
	features:  features tokLBRACE.block tokRBRACE tokSEMICOLON 
	block: .    (23)

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokVAR  shift 53
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  reduce 23 (src line 207)

	block  goto 50
	block0  goto 51
	expr  goto 52
	primary  goto 31

state 25
	varformals0:  varformals0 tokCOMMA tokVAR.tokID tokCOLON tokTYPE 

	tokID  shift 54
	.  error


state 26
	varformals0:  tokVAR tokID tokCOLON.tokTYPE 

	tokTYPE  shift 55
	.  error


state 27
	classdecl:  tokCLASS tokTYPE varformals tokEXTENDS tokTYPE actuals classbody.    (4)

	.  reduce 4 (src line 66)


state 28
	actuals:  tokLPAREN tokRPAREN.    (19)

	.  reduce 19 (src line 185)


state 29
	actuals:  tokLPAREN actuals0.tokRPAREN 
	actuals0:  actuals0.tokCOMMA expr 

	tokRPAREN  shift 56
	tokCOMMA  shift 57
	.  error


state 30
	actuals0:  expr.    (21)
	expr:  expr.tokLESSEQUAL expr 
	expr:  expr.tokLESSTHAN expr 
	expr:  expr.tokEQUALEQUAL expr 
	expr:  expr.tokMULTIPLY expr 
	expr:  expr.tokDIVIDE expr 
	expr:  expr.tokPLUS expr 
	expr:  expr.tokMINUS expr 
	expr:  expr.tokMATCH tokLBRACE cases tokRBRACE 
	expr:  expr.tokDOT tokID actuals 

	tokDOT  shift 66
	tokMULTIPLY  shift 61
	tokDIVIDE  shift 62
	tokPLUS  shift 63
	tokMINUS  shift 64
	tokEQUALEQUAL  shift 60
	tokLESSEQUAL  shift 58
	tokLESSTHAN  shift 59
	tokMATCH  shift 65
	.  reduce 21 (src line 196)


state 31
	expr:  primary.    (28)

	.  reduce 28 (src line 245)


state 32
	expr:  tokID.tokASSIGN expr 
	primary:  tokID.actuals 
	primary:  tokID.    (50)

	tokLPAREN  shift 19
	tokASSIGN  shift 67
	.  reduce 50 (src line 392)

	actuals  goto 68

state 33
	expr:  tokNEGATE.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 69
	primary  goto 31

state 34
	expr:  tokMINUS.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 70
	primary  goto 31

state 35
	expr:  tokIF.tokLPAREN expr tokRPAREN expr tokELSE expr 

	tokLPAREN  shift 71
	.  error


state 36
	expr:  tokWHILE.tokLPAREN expr tokRPAREN expr 

	tokLPAREN  shift 72
	.  error


state 37
	primary:  tokSUPER.tokDOT tokID actuals 

	tokDOT  shift 73
	.  error


state 38
	primary:  tokNEW.tokTYPE actuals 

	tokTYPE  shift 74
	.  error


state 39
	primary:  tokLBRACE.block tokRBRACE 
	block: .    (23)

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokVAR  shift 53
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  reduce 23 (src line 207)

	block  goto 75
	block0  goto 51
	expr  goto 52
	primary  goto 31

state 40
	primary:  tokLPAREN.expr tokRPAREN 
	primary:  tokLPAREN.tokRPAREN 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokRPAREN  shift 77
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 76
	primary  goto 31

state 41
	primary:  tokNULL.    (48)

	.  reduce 48 (src line 384)


state 42
	primary:  tokINTEGER.    (51)

	.  reduce 51 (src line 398)


state 43
	primary:  tokSTRING.    (52)

	.  reduce 52 (src line 404)


state 44
	primary:  tokTRUE.    (53)

	.  reduce 53 (src line 410)


state 45
	primary:  tokFALSE.    (54)

	.  reduce 54 (src line 416)


state 46
	primary:  tokTHIS.    (55)

	.  reduce 55 (src line 422)


state 47
	features:  features tokOVERRIDE tokDEF.tokID formals tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 

	tokID  shift 78
	.  error


state 48
	features:  features tokDEF tokID.formals tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 

	tokLPAREN  shift 80
	.  error

	formals  goto 79

state 49
	features:  features tokVAR tokID.tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 

	tokCOLON  shift 81
	.  error


state 50
	features:  features tokLBRACE block.tokRBRACE tokSEMICOLON 

	tokRBRACE  shift 82
	.  error


state 51
	block:  block0.    (24)

	.  reduce 24 (src line 212)


state 52
	block0:  expr.    (25)
	block0:  expr.tokSEMICOLON block0 
	expr:  expr.tokLESSEQUAL expr 
	expr:  expr.tokLESSTHAN expr 
	expr:  expr.tokEQUALEQUAL expr 
	expr:  expr.tokMULTIPLY expr 
	expr:  expr.tokDIVIDE expr 
	expr:  expr.tokPLUS expr 
	expr:  expr.tokMINUS expr 
	expr:  expr.tokMATCH tokLBRACE cases tokRBRACE 
	expr:  expr.tokDOT tokID actuals 

	tokSEMICOLON  shift 83
	tokDOT  shift 66
	tokMULTIPLY  shift 61
	tokDIVIDE  shift 62
	tokPLUS  shift 63
	tokMINUS  shift 64
	tokEQUALEQUAL  shift 60
	tokLESSEQUAL  shift 58
	tokLESSTHAN  shift 59
	tokMATCH  shift 65
	.  reduce 25 (src line 218)


state 53
	block0:  tokVAR.tokID tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON block0 

	tokID  shift 84
	.  error


state 54
	varformals0:  varformals0 tokCOMMA tokVAR tokID.tokCOLON tokTYPE 

	tokCOLON  shift 85
	.  error


state 55
	varformals0:  tokVAR tokID tokCOLON tokTYPE.    (7)

	.  reduce 7 (src line 91)


state 56
	actuals:  tokLPAREN actuals0 tokRPAREN.    (20)

	.  reduce 20 (src line 190)


state 57
	actuals0:  actuals0 tokCOMMA.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 86
	primary  goto 31

state 58
	expr:  expr tokLESSEQUAL.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 87
	primary  goto 31

state 59
	expr:  expr tokLESSTHAN.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 88
	primary  goto 31

state 60
	expr:  expr tokEQUALEQUAL.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 89
	primary  goto 31

state 61
	expr:  expr tokMULTIPLY.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 90
	primary  goto 31

state 62
	expr:  expr tokDIVIDE.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 91
	primary  goto 31

state 63
	expr:  expr tokPLUS.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 92
	primary  goto 31

state 64
	expr:  expr tokMINUS.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 93
	primary  goto 31

state 65
	expr:  expr tokMATCH.tokLBRACE cases tokRBRACE 

	tokLBRACE  shift 94
	.  error


state 66
	expr:  expr tokDOT.tokID actuals 

	tokID  shift 95
	.  error


state 67
	expr:  tokID tokASSIGN.expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 96
	primary  goto 31

state 68
	primary:  tokID actuals.    (44)

	.  reduce 44 (src line 362)


state 69
	expr:  tokNEGATE expr.    (30)
	expr:  expr.tokLESSEQUAL expr 
	expr:  expr.tokLESSTHAN expr 
	expr:  expr.tokEQUALEQUAL expr 
	expr:  expr.tokMULTIPLY expr 
	expr:  expr.tokDIVIDE expr 
	expr:  expr.tokPLUS expr 
	expr:  expr.tokMINUS expr 
	expr:  expr.tokMATCH tokLBRACE cases tokRBRACE 
	expr:  expr.tokDOT tokID actuals 

	tokMULTIPLY  shift 61
	tokDIVIDE  shift 62
	tokPLUS  shift 63
	tokMINUS  shift 64
	tokEQUALEQUAL  shift 60
	tokLESSEQUAL  shift 58
	tokLESSTHAN  shift 59
	tokMATCH  shift 65
	.  reduce 30 (src line 257)


state 70
	expr:  tokMINUS expr.    (31)
	expr:  expr.tokLESSEQUAL expr 
	expr:  expr.tokLESSTHAN expr 
	expr:  expr.tokEQUALEQUAL expr 
	expr:  expr.tokMULTIPLY expr 
	expr:  expr.tokDIVIDE expr 
	expr:  expr.tokPLUS expr 
	expr:  expr.tokMINUS expr 
	expr:  expr.tokMATCH tokLBRACE cases tokRBRACE 
	expr:  expr.tokDOT tokID actuals 

	tokMULTIPLY  shift 61
	tokDIVIDE  shift 62
	tokPLUS  shift 63
	tokMINUS  shift 64
	tokEQUALEQUAL  shift 60
	tokLESSEQUAL  shift 58
	tokLESSTHAN  shift 59
	tokMATCH  shift 65
	.  reduce 31 (src line 263)


state 71
	expr:  tokIF tokLPAREN.expr tokRPAREN expr tokELSE expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 97
	primary  goto 31

state 72
	expr:  tokWHILE tokLPAREN.expr tokRPAREN expr 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	expr  goto 98
	primary  goto 31

state 73
	primary:  tokSUPER tokDOT.tokID actuals 

	tokID  shift 99
	.  error


state 74
	primary:  tokNEW tokTYPE.actuals 

	tokLPAREN  shift 19
	.  error

	actuals  goto 100

state 75
	primary:  tokLBRACE block.tokRBRACE 

	tokRBRACE  shift 101
	.  error


state 76
	expr:  expr.tokLESSEQUAL expr 
	expr:  expr.tokLESSTHAN expr 
	expr:  expr.tokEQUALEQUAL expr 
	expr:  expr.tokMULTIPLY expr 
	expr:  expr.tokDIVIDE expr 
	expr:  expr.tokPLUS expr 
	expr:  expr.tokMINUS expr 
	expr:  expr.tokMATCH tokLBRACE cases tokRBRACE 
	expr:  expr.tokDOT tokID actuals 
	primary:  tokLPAREN expr.tokRPAREN 

	tokRPAREN  shift 102
	tokDOT  shift 66
	tokMULTIPLY  shift 61
	tokDIVIDE  shift 62
	tokPLUS  shift 63
	tokMINUS  shift 64
	tokEQUALEQUAL  shift 60
	tokLESSEQUAL  shift 58
	tokLESSTHAN  shift 59
	tokMATCH  shift 65
	.  error


state 77
	primary:  tokLPAREN tokRPAREN.    (49)

	.  reduce 49 (src line 388)


state 78
	features:  features tokOVERRIDE tokDEF tokID.formals tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 

	tokLPAREN  shift 80
	.  error

	formals  goto 103

state 79
	features:  features tokDEF tokID formals.tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON 

	tokCOLON  shift 104
	.  error


state 80
	formals:  tokLPAREN.tokRPAREN 
	formals:  tokLPAREN.formals0 tokRPAREN 

	tokID  shift 107
	tokRPAREN  shift 105
	.  error

	formals0  goto 106

state 81
	features:  features tokVAR tokID tokCOLON.tokTYPE tokASSIGN expr tokSEMICOLON 

	tokTYPE  shift 108
	.  error


state 82
	features:  features tokLBRACE block tokRBRACE.tokSEMICOLON 

	tokSEMICOLON  shift 109
	.  error


state 83
	block0:  expr tokSEMICOLON.block0 

	tokID  shift 32
	tokINTEGER  shift 42
	tokSTRING  shift 43
	tokLPAREN  shift 40
	tokVAR  shift 53
	tokLBRACE  shift 39
	tokSUPER  shift 37
	tokNEW  shift 38
	tokNULL  shift 41
	tokTRUE  shift 44
	tokFALSE  shift 45
	tokTHIS  shift 46
	tokNEGATE  shift 33
	tokMINUS  shift 34
	tokIF  shift 35
	tokWHILE  shift 36
	.  error

	block0  goto 110
	expr  goto 52
	primary  goto 31

state 84
	block0:  tokVAR tokID.tokCOLON tokTYPE tokASSIGN expr tokSEMICOLON block0 

	tokCOLON  shift 111
	.  error


state 85
	varformals0:  varformals0 tokCOMMA tokVAR tokID tokCOLON.tokTYPE 

	tokTYPE  shift 112
	.  error


state 86
	actuals0:  actuals0 tokCOMMA expr.    (22)
	expr:  expr.tokLESSEQUAL expr 
	expr:  expr.tokLESSTHAN expr 
	expr:  expr.tokEQUALEQUAL expr 
	expr:  expr.tokMULTIPLY expr 
	expr:  expr.tokDIVIDE expr 
	expr:  expr.tokPLUS expr 
	expr:  expr.tokMINUS expr 
	expr:  expr.tokMATCH tokLBRACE cases tokRBRACE 
	expr:  expr.tokDOT tokID actuals 
